Fixed invisible navbar toggle, and removed faulty import in toolcontroller

--- a/app/wwwroot/css/site.css
+++ b/app/wwwroot/css/site.css
@@ -21,6 +21,14 @@ nav.navbar a:hover, nav.navbar button:hover {
     color: #ff6600;
 }
 
+nav.navbar .navbar-toggle:hover {
+    background-color: #e8e8e8;
+}
+
+nav.navbar .navbar-toggle .icon-bar {
+    border: 1px solid #ff6600;
+}
+
 [v-cloak] {
 	display: none;
 }
